styles/blocks/trash/_interface.scss
@use '../../mixins';

.trash-interface {
  display: grid;
  gap: 20px;
  padding-top: 30px;
  padding-bottom: 30px;

  &__title {
    display: block;
    margin: 0 auto;
    color: #162b75;
    font-size: 24px;
    text-align: center;
  }

  &__playzone {
    display: grid;
    gap: 20px 40px;
    grid-template-columns: repeat(2, min-content);
    grid-template-rows: minmax(40px, min-content) 1fr;
    grid-template-areas: "right wrong"
                         "game game";
    justify-content: center;
    
    @include mixins.media(400px) {
      grid-template-columns: repeat(3, max-content);
      grid-template-rows: min-content;
      grid-template-areas: "right game wrong";
      gap: 10px;
    }
  }

  &__score {
    align-self: center;

    &.is-right {
      grid-area: right;
    }

    &.is-wrong {
      grid-area: wrong;
    }
  }

  &__game {
    grid-area: game;
    display: flex;
    justify-content: center;
    min-width: 200px;
    min-height: 200px;
  }

  &__circle {
    position: relative;
    min-height: 200px;
    min-width: 200px;
    padding: 10px;
  }
  
  &__timer {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
  }

  &__item-wrapper {
    width: 100%;
    height: 100%;
    padding: 7px;
  }

  &__start {
    width: 100%;
    border: 0;
    border-radius: 50%;
    background-color: #b063e7;
    color: #fff;
    font-size: 40px;
    font-weight: bold;
    transition: opacity 0.3s, transform 0.3s;

    &:hover,
    &:focus {
      outline: 0;
      opacity: 0.8;
      transform: scale(1.1);
    }
  }

  &__restart {
    align-self: flex-start;
    padding: 0;
    border: 0;
    background-color: transparent;
    cursor: pointer;
  }
  
  &__boxes {
    --box-size: 60px;

    display: grid;
    grid-template-columns: repeat(4, minmax(60px, 100px));
    gap: 20px;

    
    // @include mixins.media(450px) {
    //   --box-size: 100px;
    // }

    &.is-disabled {
      pointer-events: none;
    }
  }  
}

